--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "^5.4.55",
     "core-js": "^3.6.5",
     "lodash": "^4.17.19",
+    "markdown-it-vue": "^1.1.3",
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
@@ -39,6 +40,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "geckodriver": "^1.19.1",
+    "raw-loader": "^4.0.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
