--- a/front/package.json
+++ b/front/package.json
@@ -10,14 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@mdi/font": "^5.4.55",
+    "@mdi/font": "^5.5.55",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.20",
     "markdown-it-vue": "^1.1.3",
     "material-design-icons-iconfont": "^5.0.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
+    "serialize-javascript": "^4.0.0",
+    "vue": "^2.6.12",
+    "vue-router": "^3.4.3",
+    "vuetify": "^2.3.9",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -29,7 +30,7 @@
     "@vue/cli-plugin-vuex": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/test-utils": "^1.0.3",
+    "@vue/test-utils": "^1.0.4",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "chromedriver": "^81.0.0",
@@ -39,12 +40,12 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "geckodriver": "^1.19.1",
+    "geckodriver": "^1.20.0",
     "raw-loader": "^4.0.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "~2.0.7",
-    "vue-template-compiler": "^2.6.11",
+    "vue-template-compiler": "^2.6.12",
     "vuetify-loader": "^1.3.0"
   }
 }
