--- a/front/package.json
+++ b/front/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.12",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.9",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
