--- a/front/package.json
+++ b/front/package.json
@@ -15,12 +15,12 @@
     "lodash": "^4.17.20",
     "markdown-it-vue": "^1.1.3",
     "material-design-icons-iconfont": "^5.0.1",
-    "serialize-javascript": "^4.0.0",
     "vue": "^2.6.12",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.9",
     "vuex": "^3.4.0",
-    "vuex-persist": "^2.2.0"
+    "vuex-persist": "^2.2.0",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
