--- a/back/package.json
+++ b/back/package.json
@@ -19,6 +19,7 @@
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
