--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ front/node_modules/
 front/src/config
 front/tests
 front/dist
+front/src/components/About.md
 back/node_modules/
 back/seed/
 back/src/config/
